# es-client

./: .env.development  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/en/: README.md  contributing.md  getting-started.md
docs/zh-CN/: README.md  getting-started.md
src/: App.tsx  env.d.ts  index.css  index.js  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: check_padding.py  icon.icns
src-tauri/src/: commands.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/elasticsearch/: client.rs
src/components/: ClusterInfo.tsx  ClusterOverview.tsx  ConnectionForm.tsx  ConnectionList.tsx  ErrorBoundary.tsx  HotkeysHelp.tsx  IndexList.tsx  Indices.tsx  Layout.tsx  MobileNav.tsx  Navigation.tsx  Nodes.tsx  Pagination.tsx  Search.tsx  ShardList.tsx  Shards.tsx  Snapshots.tsx  b.tsx
src/components/common/: ErrorBoundary.tsx  HotkeysHelp.tsx  LoadingButton.tsx  LogViewer.tsx  NotFound.tsx  Pagination.tsx  index.ts
src/components/features/: ClusterInfo.tsx  ClusterOverview.tsx  ConnectionForm.tsx  ConnectionList.tsx  IndexDetails.tsx  IndexList.tsx  Indices.tsx  Nodes.tsx  ShardList.tsx  Shards.tsx  Snapshots.tsx  index.ts
src/components/layouts/: Layout.tsx  MobileNav.tsx  Navigation.tsx  index.ts
src/components/ui/: card.tsx  (+9 more)
src/lib/: utils.ts
src/pages/: Home.tsx
src/routes/: index.tsx
src/services/: error.ts
src/store/: connection.ts  hotkeys.ts  index.ts
src/utils/: index.ts
(+5 files in other folders)
