[package]
name = "elastic-eye"
version = "0.1.0"
description = "Elasticsearch Client"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "elastic_eye_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.12", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.12", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.32", features = ["full"] }
elasticsearch = { version = "8.15.0-alpha.1" }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
config = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
tokio-rusqlite = "0.4.0"
chrono = "0.4"
url = "2.4"

